--- a/project.yml
+++ b/project.yml
@@ -1,10 +1,10 @@
-name: Swift_API_Client
+name: Cloneable_Swift_API
 targets:
-  Swift_API_Client:
+  Cloneable_Swift_API:
     type: framework
     platform: iOS
     deploymentTarget: "9.0"
-    sources: [Swift_API_Client]
+    sources: [Cloneable_Swift_API]
     info:
       path: ./Info.plist
       version: 0.0.1
