--- a/project.yml
+++ b/project.yml
@@ -1,10 +1,10 @@
-name: Cloneable_Swift_API
+name: Cloneable_Swift_Client
 targets:
-  Cloneable_Swift_API:
+  Cloneable_Swift_Client:
     type: framework
     platform: iOS
     deploymentTarget: "9.0"
-    sources: [Cloneable_Swift_API]
+    sources: [Cloneable_Swift_Client]
     info:
       path: ./Info.plist
       version: 0.0.1
