--- a/project.yml
+++ b/project.yml
@@ -1,10 +1,10 @@
-name: OpenAPIClient
+name: Cloneable_Swift_Client
 targets:
-  OpenAPIClient:
+  Cloneable_Swift_Client:
     type: framework
     platform: iOS
     deploymentTarget: "11.0"
-    sources: [OpenAPIClient]
+    sources: [Cloneable_Swift_Client]
     info:
       path: ./Info.plist
       version: 0.0.1
